	PR missed-optimization/77881 	* combine.c (simplify_comparison): Remove useless subregs 	also inside the loop, not just after it. 	(make_compound_operation): Recognize some subregs as being 	masking as well.

testsuite/
	* gcc.target/i386/pr77881.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@242414 138bc75d-0d04-0410-961f-82ee72b054a4